extract scan and report generation code into a single-threaded cli tool

--- a/BDInfoGUI/BDInfoGUI.csproj
+++ b/BDInfoGUI/BDInfoGUI.csproj
@@ -20,6 +20,7 @@
     <IsPublishable>True</IsPublishable>
     <Platforms>AnyCPU;ARM64;x64</Platforms>
     <LangVersion>default</LangVersion>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
