--- a/BDInfoSummary/BDInfoSummary.csproj
+++ b/BDInfoSummary/BDInfoSummary.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BDInfoSummary\BDInfoSummary.csproj" />
+        <ProjectReference Include="..\BDInfo\BDInfoLib.csproj" />
     </ItemGroup>
 
 </Project>
