--- a/BDInfoWasm/BDInfoWasm.csproj
+++ b/BDInfoWasm/BDInfoWasm.csproj
@@ -20,5 +20,6 @@
     <ItemGroup>
         <WasmExtraFilesToDeploy Include="index.html"/>
         <WasmExtraFilesToDeploy Include="main.js"/>
+        <WasmExtraFilesToDeploy Include="worker.js"/>
     </ItemGroup>
 </Project>
